--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
     
     permissions:
       id-token: write
-      contents: read
+      contents: write
     
     steps:
       - name: Checkout code
